# n64brew-gamejam-2021

./: .devcontainer.json  .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
assets/: dialogue.txt  manifest.json
assets/girl/: girl.gltf
assets/haunted_tunnel/: haunted_tunnel.gltf
assets/jack_o_lantern/: jack_o_lantern.gltf
assets/music/: n64_main.mid
assets/toad/: toad.gltf
src/: CMakeLists.txt  animated_material_texture.c  animated_material_texture.h  chase_camera.c  chase_camera.h  dialogue_window.c  dialogue_window.h  enemy.c  enemy.h  fade_effect.c  fade_effect.h  game.c  game.h  game_settings.h  layermap.h  level.c  level.h  level1.c  level1.h  level_base.c  level_base.h  main_n64.c  moving_platform.c  moving_platform.h  player.c  player.h  player_palette.c  player_palette.h  scene_manager.c  scene_manager.h  shadow.c  shadow.h  sparkle.c  sparkle.h  trigger_box.c  trigger_box.h  tunnel_level.c  tunnel_level.h  typemap.h  ui.c  (+3 more)
src/initial/: level.c  level.h
src/states/: end.c  end.h  gamestates.c  gamestates.h  playing.c  playing.h  title.c  title.h  title_animation.c  title_animation.h
src/tunnel/: atrium.c  atrium.h  cutscene.c  cutscene.h  fire_obstacle.c  fire_obstacle.h  firewall.c  firewall.h  girl.c  girl.h  hallway.c  hallway.h  key.c  key.h  lavapit.c  lavapit.h  tunnel_level.c  tunnel_level.h
test/: CMakeLists.txt
test/test_audio/: CMakeLists.txt  game.c  test_audio.spec
