cmake_minimum_required(VERSION 3.16)

include(lib/framework64/cmake/configure_platform.cmake REQUIRED)

if (FW64_PLATFORM_N64)
    message("Configuring for Platform: Nintendo64")
    if(FW64_TV_MODE_PAL)
        message("Configuring for TV type: PAL")
        add_definitions(-DTV_MODE_PAL)
    elseif(FW64_TV_MODE_MPAL)
        message("Configuring for TV type: MPAL")
        add_definitions(-DTV_MODE_MPAL)
    else()
        message("Configuring for TV type: NTSC")
    endif()    
    project(game C)
else()
    project(game)
endif()

add_subdirectory(lib/framework64)
add_subdirectory(src)